--- a/Todo/src/main/resources/application.properties
+++ b/Todo/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Todo
+server.port=9848
+spring.datasource.url=jdbc:h2:file:/data/todos;DB_CLOSE_DELAY=-1;
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+#When server starts it updates the DB based on the changes detected in your entity classes
+spring.jpa.show-sql=true
+#this helps query getting logged when executed
+spring.jpa.properties.hibernate.format_sql=true
+spring.h2.console.enabled=true
